// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SortableListItem should render successfully 1`] = `
<div>
  <article
    class="css-xdl9g7"
    data-test-id="cf-ui-card"
  >
    <div
      class="css-11p49tw"
      data-test-id="cf-ui-drag-handle"
      role="button"
      tabindex="0"
    >
      <svg
        aria-hidden="true"
        class="css-en3na7"
        data-test-id="cf-ui-icon"
        role="img"
        viewBox="0 0 24 24"
      >
        <path
          d="M0 0h24v24H0V0z"
          fill="none"
        />
        <path
          d="M11 18c0 1.1-.9 2-2 2s-2-.9-2-2 .9-2 2-2 2 .9 2 2zm-2-8c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm0-6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm6 4c1.1 0 2-.9 2-2s-.9-2-2-2-2 .9-2 2 .9 2 2 2zm0 2c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm0 6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z"
        />
      </svg>
      <span
        class="css-1b512s9"
      >
        Reorder entry
      </span>
    </div>
    <div
      class="css-1cjnmwb"
      data-card-part="wrapper"
    >
      <div
        class="css-161cbg"
        data-card-part="content"
      >
        <div
          class="css-k008qs"
        >
          <div
            class="css-14jukvq"
          >
            <img
              alt="Mock Category"
              data-test-id="image"
              src=""
              style="display: block;"
            />
          </div>
          <section
            class="css-1phcpb1"
          >
            <h1
              class="css-19gqs9u"
              data-test-id="cf-ui-heading"
            >
              Mock Category
            </h1>
            <h3
              class="css-1dno5oq"
              data-test-id="cf-ui-subheading"
            >
              abc1234
            </h3>
          </section>
        </div>
        <div
          class="css-mfolfb"
        >
          <button
            aria-label="Delete"
            class="css-zob9g7"
            data-test-id="cf-ui-icon-button"
            type="button"
          >
            <span
              class="css-k008qs"
            >
              <svg
                aria-hidden="true"
                class="css-1jrff5x"
                data-test-id="cf-ui-icon"
                role="img"
                viewBox="0 0 24 24"
              >
                <path
                  d="M18.7071 6.70711C19.0976 6.31658 19.0976 5.68342 18.7071 5.29289C18.3166 4.90237 17.6834 4.90237 17.2929 5.29289L12 10.5858L6.70711 5.29289C6.31658 4.90237 5.68342 4.90237 5.29289 5.29289C4.90237 5.68342 4.90237 6.31658 5.29289 6.70711L10.5858 12L5.29289 17.2929C4.90237 17.6834 4.90237 18.3166 5.29289 18.7071C5.68342 19.0976 6.31658 19.0976 6.70711 18.7071L12 13.4142L17.2929 18.7071C17.6834 19.0976 18.3166 19.0976 18.7071 18.7071C19.0976 18.3166 19.0976 17.6834 18.7071 17.2929L13.4142 12L18.7071 6.70711Z"
                />
              </svg>
            </span>
          </button>
        </div>
      </div>
    </div>
  </article>
</div>
`;

exports[`SortableListItem should render successfully the error variation for missing image 1`] = `
<div>
  <article
    class="css-xdl9g7"
    data-test-id="cf-ui-card"
  >
    <div
      class="css-11p49tw"
      data-test-id="cf-ui-drag-handle"
      role="button"
      tabindex="0"
    >
      <svg
        aria-hidden="true"
        class="css-en3na7"
        data-test-id="cf-ui-icon"
        role="img"
        viewBox="0 0 24 24"
      >
        <path
          d="M0 0h24v24H0V0z"
          fill="none"
        />
        <path
          d="M11 18c0 1.1-.9 2-2 2s-2-.9-2-2 .9-2 2-2 2 .9 2 2zm-2-8c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm0-6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm6 4c1.1 0 2-.9 2-2s-.9-2-2-2-2 .9-2 2 .9 2 2 2zm0 2c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm0 6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z"
        />
      </svg>
      <span
        class="css-1b512s9"
      >
        Reorder entry
      </span>
    </div>
    <div
      class="css-1cjnmwb"
      data-card-part="wrapper"
    >
      <div
        class="css-161cbg"
        data-card-part="content"
      >
        <div
          class="css-k008qs"
        >
          <div
            class="css-6t06np"
          >
            <svg
              aria-hidden="true"
              class="css-rm9mk1"
              data-test-id="asset-icon"
              role="img"
              viewBox="0 0 24 24"
            >
              <path
                d="M0 0h24v24H0V0z"
                fill="none"
              />
              <g>
                <path
                  d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                />
                <path
                  d="M14.14 11.86l-3 3.87L9 13.14 6 17h12l-3.86-5.14z"
                />
              </g>
            </svg>
          </div>
          <section
            class="css-1phcpb1"
          >
            <h1
              class="css-19gqs9u"
              data-test-id="cf-ui-heading"
            >
              Mock Category
            </h1>
            <h3
              class="css-1dno5oq"
              data-test-id="cf-ui-subheading"
            >
              abc1234
            </h3>
          </section>
        </div>
        <div
          class="css-mfolfb"
        >
          <button
            aria-label="Delete"
            class="css-zob9g7"
            data-test-id="cf-ui-icon-button"
            type="button"
          >
            <span
              class="css-k008qs"
            >
              <svg
                aria-hidden="true"
                class="css-1jrff5x"
                data-test-id="cf-ui-icon"
                role="img"
                viewBox="0 0 24 24"
              >
                <path
                  d="M18.7071 6.70711C19.0976 6.31658 19.0976 5.68342 18.7071 5.29289C18.3166 4.90237 17.6834 4.90237 17.2929 5.29289L12 10.5858L6.70711 5.29289C6.31658 4.90237 5.68342 4.90237 5.29289 5.29289C4.90237 5.68342 4.90237 6.31658 5.29289 6.70711L10.5858 12L5.29289 17.2929C4.90237 17.6834 4.90237 18.3166 5.29289 18.7071C5.68342 19.0976 6.31658 19.0976 6.70711 18.7071L12 13.4142L17.2929 18.7071C17.6834 19.0976 18.3166 19.0976 18.7071 18.7071C19.0976 18.3166 19.0976 17.6834 18.7071 17.2929L13.4142 12L18.7071 6.70711Z"
                />
              </svg>
            </span>
          </button>
        </div>
      </div>
    </div>
  </article>
</div>
`;

exports[`SortableListItem should render successfully the error variation for missing product 1`] = `
<div>
  <article
    class="css-xdl9g7"
    data-test-id="cf-ui-card"
  >
    <div
      class="css-11p49tw"
      data-test-id="cf-ui-drag-handle"
      role="button"
      tabindex="0"
    >
      <svg
        aria-hidden="true"
        class="css-en3na7"
        data-test-id="cf-ui-icon"
        role="img"
        viewBox="0 0 24 24"
      >
        <path
          d="M0 0h24v24H0V0z"
          fill="none"
        />
        <path
          d="M11 18c0 1.1-.9 2-2 2s-2-.9-2-2 .9-2 2-2 2 .9 2 2zm-2-8c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm0-6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm6 4c1.1 0 2-.9 2-2s-.9-2-2-2-2 .9-2 2 .9 2 2 2zm0 2c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm0 6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z"
        />
      </svg>
      <span
        class="css-1b512s9"
      >
        Reorder entry
      </span>
    </div>
    <div
      class="css-1cjnmwb"
      data-card-part="wrapper"
    >
      <div
        class="css-161cbg"
        data-card-part="content"
      >
        <div
          class="css-k008qs"
        >
          <div
            class="css-6t06np"
          >
            <svg
              aria-hidden="true"
              class="css-rm9mk1"
              data-test-id="asset-icon"
              role="img"
              viewBox="0 0 24 24"
            >
              <path
                d="M0 0h24v24H0V0z"
                fill="none"
              />
              <g>
                <path
                  d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                />
                <path
                  d="M14.14 11.86l-3 3.87L9 13.14 6 17h12l-3.86-5.14z"
                />
              </g>
            </svg>
          </div>
          <section
            class="css-1phcpb1"
          >
            <h1
              class="css-1t11k68"
              data-test-id="cf-ui-heading"
            >
              abc1234
            </h1>
            
          </section>
        </div>
        <div
          class="css-mfolfb"
        >
          <button
            aria-label="Delete"
            class="css-zob9g7"
            data-test-id="cf-ui-icon-button"
            type="button"
          >
            <span
              class="css-k008qs"
            >
              <svg
                aria-hidden="true"
                class="css-1jrff5x"
                data-test-id="cf-ui-icon"
                role="img"
                viewBox="0 0 24 24"
              >
                <path
                  d="M18.7071 6.70711C19.0976 6.31658 19.0976 5.68342 18.7071 5.29289C18.3166 4.90237 17.6834 4.90237 17.2929 5.29289L12 10.5858L6.70711 5.29289C6.31658 4.90237 5.68342 4.90237 5.29289 5.29289C4.90237 5.68342 4.90237 6.31658 5.29289 6.70711L10.5858 12L5.29289 17.2929C4.90237 17.6834 4.90237 18.3166 5.29289 18.7071C5.68342 19.0976 6.31658 19.0976 6.70711 18.7071L12 13.4142L17.2929 18.7071C17.6834 19.0976 18.3166 19.0976 18.7071 18.7071C19.0976 18.3166 19.0976 17.6834 18.7071 17.2929L13.4142 12L18.7071 6.70711Z"
                />
              </svg>
            </span>
          </button>
        </div>
      </div>
    </div>
  </article>
</div>
`;

exports[`SortableListItem should render successfully the loading variation 1`] = `
<div>
  <article
    class="css-xdl9g7"
    data-test-id="cf-ui-card"
  >
    <div
      class="css-11p49tw"
      data-test-id="cf-ui-drag-handle"
      role="button"
      tabindex="0"
    >
      <svg
        aria-hidden="true"
        class="css-en3na7"
        data-test-id="cf-ui-icon"
        role="img"
        viewBox="0 0 24 24"
      >
        <path
          d="M0 0h24v24H0V0z"
          fill="none"
        />
        <path
          d="M11 18c0 1.1-.9 2-2 2s-2-.9-2-2 .9-2 2-2 2 .9 2 2zm-2-8c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm0-6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm6 4c1.1 0 2-.9 2-2s-.9-2-2-2-2 .9-2 2 .9 2 2 2zm0 2c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm0 6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z"
        />
      </svg>
      <span
        class="css-1b512s9"
      >
        Reorder entry
      </span>
    </div>
    <div
      class="css-1cjnmwb"
      data-card-part="wrapper"
    >
      <div
        class="css-161cbg"
        data-card-part="content"
      >
        <div
          class="css-k008qs"
        >
          <svg
            aria-label="Loading component..."
            class="css-1xwljqd"
            data-test-id="cf-ui-skeleton-form"
            height="100%"
            role="img"
            width="100%"
          >
            <title>
              Loading component...
            </title>
            <rect
              clip-path="url(#cf-ui-skeleton-clip_3083)"
              height="100%"
              style="fill: url(#cf-ui-skeleton-clip-gradient_477);"
              width="100%"
              x="0"
              y="0"
            />
            <defs>
              <clippath
                id="cf-ui-skeleton-clip_3083"
              >
                <rect
                  data-test-id="cf-ui-skeleton-image"
                  height="48"
                  rx="4px"
                  ry="4px"
                  width="48"
                />
              </clippath>
              <lineargradient
                id="cf-ui-skeleton-clip-gradient_477"
              >
                <stop
                  offset="0%"
                  stop-color="#e5ebed"
                  stop-opacity="1"
                >
                  <animate
                    attributeName="stop-color"
                    dur="2s"
                    id="animation_9974"
                    repeatCount="indefinite"
                    values="#e5ebed; #f7f9fa; #e5ebed"
                  />
                </stop>
                <stop
                  offset="50%"
                  stop-color="#f7f9fa"
                  stop-opacity="1"
                >
                  <animate
                    attributeName="stop-color"
                    begin="animation_9974.begin+0.25s"
                    dur="2s"
                    repeatCount="indefinite"
                    values="#e5ebed; #f7f9fa; #e5ebed"
                  />
                </stop>
                <stop
                  offset="100%"
                  stop-color="#e5ebed"
                  stop-opacity="1"
                >
                  <animate
                    attributeName="stop-color"
                    begin="animation_9974.begin+0.5s"
                    dur="2s"
                    repeatCount="indefinite"
                    values="#e5ebed; #f7f9fa; #e5ebed"
                  />
                </stop>
              </lineargradient>
            </defs>
          </svg>
          <div
            class="css-kx63wx"
          >
            <img
              alt="Mock Category"
              data-test-id="image"
              src=""
              style="display: none;"
            />
          </div>
          <section
            class="css-1phcpb1"
          >
            <h1
              class="css-19gqs9u"
              data-test-id="cf-ui-heading"
            >
              Mock Category
            </h1>
            <h3
              class="css-1dno5oq"
              data-test-id="cf-ui-subheading"
            >
              abc1234
            </h3>
          </section>
        </div>
        <div
          class="css-mfolfb"
        >
          <button
            aria-label="Delete"
            class="css-zob9g7"
            data-test-id="cf-ui-icon-button"
            type="button"
          >
            <span
              class="css-k008qs"
            >
              <svg
                aria-hidden="true"
                class="css-1jrff5x"
                data-test-id="cf-ui-icon"
                role="img"
                viewBox="0 0 24 24"
              >
                <path
                  d="M18.7071 6.70711C19.0976 6.31658 19.0976 5.68342 18.7071 5.29289C18.3166 4.90237 17.6834 4.90237 17.2929 5.29289L12 10.5858L6.70711 5.29289C6.31658 4.90237 5.68342 4.90237 5.29289 5.29289C4.90237 5.68342 4.90237 6.31658 5.29289 6.70711L10.5858 12L5.29289 17.2929C4.90237 17.6834 4.90237 18.3166 5.29289 18.7071C5.68342 19.0976 6.31658 19.0976 6.70711 18.7071L12 13.4142L17.2929 18.7071C17.6834 19.0976 18.3166 19.0976 18.7071 18.7071C19.0976 18.3166 19.0976 17.6834 18.7071 17.2929L13.4142 12L18.7071 6.70711Z"
                />
              </svg>
            </span>
          </button>
        </div>
      </div>
    </div>
  </article>
</div>
`;

exports[`SortableListItem should render successfully the sortable variation 1`] = `
<div>
  <article
    class="css-xdl9g7"
    data-test-id="cf-ui-card"
  >
    <div
      class="css-11p49tw"
      data-test-id="cf-ui-drag-handle"
      role="button"
      tabindex="0"
    >
      <svg
        aria-hidden="true"
        class="css-en3na7"
        data-test-id="cf-ui-icon"
        role="img"
        viewBox="0 0 24 24"
      >
        <path
          d="M0 0h24v24H0V0z"
          fill="none"
        />
        <path
          d="M11 18c0 1.1-.9 2-2 2s-2-.9-2-2 .9-2 2-2 2 .9 2 2zm-2-8c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm0-6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm6 4c1.1 0 2-.9 2-2s-.9-2-2-2-2 .9-2 2 .9 2 2 2zm0 2c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm0 6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z"
        />
      </svg>
      <span
        class="css-1b512s9"
      >
        Reorder entry
      </span>
    </div>
    <div
      class="css-1cjnmwb"
      data-card-part="wrapper"
    >
      <div
        class="css-161cbg"
        data-card-part="content"
      >
        <div
          class="css-k008qs"
        >
          <div
            class="css-14jukvq"
          >
            <img
              alt="Mock Category"
              data-test-id="image"
              src=""
              style="display: block;"
            />
          </div>
          <section
            class="css-1phcpb1"
          >
            <h1
              class="css-19gqs9u"
              data-test-id="cf-ui-heading"
            >
              Mock Category
            </h1>
            <h3
              class="css-1dno5oq"
              data-test-id="cf-ui-subheading"
            >
              abc1234
            </h3>
          </section>
        </div>
        <div
          class="css-mfolfb"
        >
          <button
            aria-label="Delete"
            class="css-zob9g7"
            data-test-id="cf-ui-icon-button"
            type="button"
          >
            <span
              class="css-k008qs"
            >
              <svg
                aria-hidden="true"
                class="css-1jrff5x"
                data-test-id="cf-ui-icon"
                role="img"
                viewBox="0 0 24 24"
              >
                <path
                  d="M18.7071 6.70711C19.0976 6.31658 19.0976 5.68342 18.7071 5.29289C18.3166 4.90237 17.6834 4.90237 17.2929 5.29289L12 10.5858L6.70711 5.29289C6.31658 4.90237 5.68342 4.90237 5.29289 5.29289C4.90237 5.68342 4.90237 6.31658 5.29289 6.70711L10.5858 12L5.29289 17.2929C4.90237 17.6834 4.90237 18.3166 5.29289 18.7071C5.68342 19.0976 6.31658 19.0976 6.70711 18.7071L12 13.4142L17.2929 18.7071C17.6834 19.0976 18.3166 19.0976 18.7071 18.7071C19.0976 18.3166 19.0976 17.6834 18.7071 17.2929L13.4142 12L18.7071 6.70711Z"
                />
              </svg>
            </span>
          </button>
        </div>
      </div>
    </div>
  </article>
</div>
`;
